--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
